# trackyourbudget

./: .gitignore  CONTRIBUTING.md  README.md  gen_icon.py  package-lock.json  package.json
.github/workflows/: pages.yml
landing/: index.html
scripts/: serve.js
src/: app.js  index.html  manifest.webmanifest  styles.css  sw.js  version.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
