[package]
name = "sparblick"
version = "0.6.0"
description = "Lokaler Vertrags- und Budget-Tracker"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "sparblick_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
